--- a/nextjs-mui-ts-starter/.env
+++ b/nextjs-mui-ts-starter/.env
@@ -1,1 +1,23 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+
+NEXTAUTH_URL=http://localhost:3000
+
+# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_SECRET=justASecretForJWT 
+
+
+AUTH0_ID=
+AUTH0_SECRET=
+AUTH0_ISSUER=
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+
+GITHUB_ID=6b15e8ba050be30b05ca
+GITHUB_SECRET=1369bc2968c31b15c8af9886ac0171d65341eae4
+
+GOOGLE_ID=
+GOOGLE_SECRET=
+
+TWITTER_ID=
+TWITTER_SECRET=
