--- a/nextjs-mui-ts-starter/package.json
+++ b/nextjs-mui-ts-starter/package.json
@@ -20,6 +20,7 @@
     "dayjs": "1.11.10",
     "next": "13.4.19",
     "next-auth": "4.23.1",
+    "next-nprogress-bar": "2.1.2",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
     "react-slick": "0.29.0",
     "sass": "^1.75.0",
     "slick-carousel": "1.8.1",
+    "slugify": "^1.6.6",
     "wavesurfer.js": "7.3.1"
   },
   "devDependencies": {
