--- a/nextjs-mui-ts-starter/package.json
+++ b/nextjs-mui-ts-starter/package.json
@@ -12,33 +12,34 @@
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.14.7",
-    "@mui/material": "5.14.7",
-    "axios": "1.5.0",
-    "dayjs": "1.11.10",
-    "next": "13.4.19",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/icons-material": "5.15.16",
+    "@mui/material": "5.15.16",
+    "axios": "1.6.8",
+    "dayjs": "1.11.11",
+    "next": "13.5.6",
     "next-auth": "4.23.1",
-    "next-nprogress-bar": "2.1.2",
-    "query-string": "8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next-nprogress-bar": "2.3.11",
+    "query-string": "9.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-dropzone": "14.2.3",
-    "react-h5-audio-player": "3.8.6",
-    "react-slick": "0.29.0",
-    "sass": "^1.75.0",
+    "react-h5-audio-player": "3.9.1",
+    "react-slick": "0.30.2",
+    "sass": "^1.76.0",
+    "sharp": "^0.33.3",
     "slick-carousel": "1.8.1",
     "slugify": "^1.6.6",
-    "wavesurfer.js": "7.3.1"
+    "wavesurfer.js": "7.7.12"
   },
   "devDependencies": {
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-slick": "^0.23.13",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "typescript": "5.2.2"
+    "eslint": "9.1.1",
+    "eslint-config-next": "14.2.3",
+    "typescript": "5.4.5"
   }
 }
