Update project with nextjs 14

--- a/nextjs-mui-ts-starter/build-docker/docker-compose.yml
+++ b/nextjs-mui-ts-starter/build-docker/docker-compose.yml
@@ -19,4 +19,4 @@ services:
       context: ..
       dockerfile: Dockerfile
     restart: unless-stopped
-#docker compose -p hoidanit-soundcloud up -d
+#docker compose -p ptmusic-soundcloud up -d
