--- a/nextjs-mui-ts-starter/Dockerfile
+++ b/nextjs-mui-ts-starter/Dockerfile
@@ -4,7 +4,7 @@ FROM node:18-alpine AS base
 FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
-WORKDIR /hoidanit-nextjs
+WORKDIR /ptmusic-nextjs
 # Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
 RUN \
@@ -17,8 +17,8 @@ RUN \
 
 # Rebuild the source code only when needed
 FROM base AS builder
-WORKDIR /hoidanit-nextjs
-COPY --from=deps /hoidanit-nextjs/node_modules ./node_modules
+WORKDIR /ptmusic-nextjs
+COPY --from=deps /ptmusic-nextjs/node_modules ./node_modules
 COPY . .
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
@@ -32,7 +32,7 @@ RUN npm run build
 
 # Production image, copy all the files and run next
 FROM base AS runner
-WORKDIR /hoidanit-nextjs
+WORKDIR /ptmusic-nextjs
 
 ENV NODE_ENV production
 # Uncomment the following line in case you want to disable telemetry during runtime.
@@ -41,12 +41,12 @@ ENV NEXT_TELEMETRY_DISABLED 1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /hoidanit-nextjs/public ./public
+COPY --from=builder /ptmusic-nextjs/public ./public
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /hoidanit-nextjs/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /hoidanit-nextjs/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /ptmusic-nextjs/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /ptmusic-nextjs/.next/static ./.next/static
 
 USER nextjs
 
@@ -56,6 +56,6 @@ ENV PORT 3001
 
 CMD ["node", "server.js"]
 
-# docker build -t hoidanit-next-soundcloud .
-# docker run -d --name hoidanit -p 3000:3000 hoidanit-next-soundcloud 
+# docker build -t ptmucsic-next-soundcloud .
+# docker run -d --name ptmucsic -p 3000:3000 ptmucsic-next-soundcloud 
 
