--- a/nextjs-mui-ts-starter/package.json
+++ b/nextjs-mui-ts-starter/package.json
@@ -19,7 +19,7 @@
     "axios": "1.6.8",
     "dayjs": "1.11.11",
     "next": "14.2.3",
-    "next-auth": "4.23.1",
+    "next-auth": "4.24.7",
     "next-nprogress-bar": "2.3.11",
     "query-string": "9.0.0",
     "react": "18.3.1",
@@ -31,13 +31,13 @@
     "sharp": "^0.33.3",
     "slick-carousel": "1.8.1",
     "slugify": "^1.6.6",
-    "wavesurfer.js": "7.7.12"
+    "wavesurfer.js": "7.7.13"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@types/react-slick": "^0.23.13",
+    "@types/react-slick": "0.23.13",
     "eslint": "9.2.0",
     "eslint-config-next": "14.2.3",
     "typescript": "5.4.5"
